--- a/Reports/Final Report/ResearchReport/Conclusion.tex
+++ b/Reports/Final Report/ResearchReport/Conclusion.tex
@@ -23,6 +23,6 @@ mirror reflects the laser realistically based on the angle of incidence. We've
 used this demo to test augmented reality setups with different types of markers,
 hardware and frameworks.
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \includegraphics[width=\textwidth]{ResearchReport/demo.png}
 \end{figure}
