Productivity dropping, so I'm just writing a bit for the final report.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -356,6 +356,15 @@
 			these objects would not add much more to the game, and as such,
 			development on them was scrapped.
 			
+			Another idea that was eventually scrapped was the inclusion of
+			switches that would be triggered by aiming a beam on them, which
+			would then cause a wall linked to the switch to become transparent,
+			allowing light to pass through it. This would cause players to
+			collaborate to aim a beam to the switch, and then to aim another
+			beam through the transparent wall. However, no models nor scripts
+			were developed for this functionality, and the idea was eventually
+			scrapped.
+			
 	\section{Level design} \label{sec:leveldesign}
 		Levels are designed to be simple at first, requiring little collaboration,
 		while getting progressively harder, as well as introducing more and more
