Added a figure of SonarQube to the report.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -82,7 +82,15 @@
 		the abovementioned tools, and performs various code metrics, like cyclomatic 
 		complexity and dependency cycles. Using SonarQube enabled us to spot 
 		problematic classes and methods and allowed us to improve the overall 
-		structure of the source code of the project.
+		structure of the source code of the project. An example of a SonarQube
+		overview can be seen in figure \ref{fig:sonarqube}
+		
+		\begin{figure}[!ht]
+			\centering
+			\includegraphics[width=\textwidth]{SonarQube}
+			\caption{A SonarQube overview.}
+			\label{fig:sonarqube}
+		\end{figure}
 		
 	\section{SIG Evaluation} \label{sec:sigevaluation}
 		%TODO Write introduction part to SIG evaluation.
