--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -7,6 +7,9 @@
 \bibliographystyle{apalike}
 \pagenumbering{roman}
 
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{5pt plus 2pt minus 1pt}
+
 % Title Page
 \title{Augmented Reality mirror game}
 \author{Thijs Boumans \and Patrick Kramer \and
