Having a huge writer's block today.

--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -33,8 +33,12 @@
 		at best. The SDK that we used first was also very buggy (due to the
 		experimental nature of the META One).
 		
-		\subsection{SLAM localization} \label{ssec:slamloc}
-			...
+		\subsection{SLAM tracking} \label{ssec:slamloc}
+			SLAM is an acronym, which stands for Simultaneous Localization And
+			Mapping. It stands for a computational problem involving making
+			a map of an unknown environment while updating the location of
+			the agent within it (this definition follows from Wikipedia).
+			
 
 	\section{Marker Detection} \label{sec:markerdetection}
 		...
