Using more \texttt commands to make the usage consistent.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -143,7 +143,7 @@
 			
 			\begin{figure}[ht]
 				\includegraphics[width=\textwidth]{ClassDiagramCore}
-				\caption{Class diagram of the Core namespace}
+				\caption{Class diagram of the \texttt{Core} namespace}
 				\label{fig:classdiagramcore}
 			\end{figure}
 			
@@ -196,12 +196,12 @@
 			
 			\begin{figure}[ht]
 				\includegraphics[width=\textwidth]{ClassDiagramNetwork}
-				\caption{Class diagram of the Network namespace}
+				\caption{Class diagram of the \texttt{Network} namespace}
 				\label{fig:classdiagramnetwork}
 			\end{figure}
 			
 		\subsection{The Projection namespace} \label{ssec:projectionnamespace}
-			The Projection namespace is responsible for projecting the 
+			The \texttt{Projection} namespace is responsible for projecting the 
 			world to the Meta One glasses. It takes care of detecting 
 			markers in the playing area and projects all objects relative
 			to those markers. 
@@ -215,7 +215,7 @@
 			corresponding laser beams still appear at the correct positions,
 			the Network namespace provides relative positions and rotations for 
 			all game markers in the playing area (also see paragraph 
-			\ref{ssec:networknamespace}). The Projection namespace then uses
+			\ref{ssec:networknamespace}). The \texttt{Projection} namespace then uses
 			this information to place the objects in correct positions relative
 			to any marker detected by the Meta SDK. This ensures that all objects
 			remain visible and in the correct locations, as long as the Meta SDK 
@@ -232,7 +232,7 @@
 			
 			\begin{figure}[ht]
 				\includegraphics[width=\textwidth]{ClassDiagramProjection}
-				\caption{Class diagram of the Projection namespace}
+				\caption{Class diagram of the \texttt{Projection} namespace}
 				\label{fig:classdiagramprojection}
 			\end{figure}
 
