SLAM localization (+ Meta) done.

--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -34,7 +34,12 @@
 		experimental nature of the META One). Also, the META One has a very
 		limited field-of-view (the field-of-view was so limited that, during
 		one of our first tests with our coach, the coach had to sit back
-		)
+		to keep everything tracked, which, especially considering that they
+		had to move markers as well as track the environment continuously,
+		was less than ideal). However, the SLAM tracking built into the
+		META allows for game objects to continue to be rendered on a marker
+		even if the marker is outside of the view of the META. SLAM tracking
+		is explained in subsection \ref{ssec:slamloc}.
 		
 		\subsection{SLAM tracking} \label{ssec:slamloc}
 			SLAM is an acronym, which means Simultaneous Localization And
@@ -66,5 +71,12 @@
 		
 	\section{Networking and the OpenCV server} \label{sec:network}
 		...
+		
+		\subsection{Communication between C\# and C++} \label{ssec:communication}
+			...
+		
+		\subsection{The master camera} \label{ssec:mastercamera}
+			...
+			
 	\section{Distinguishable markers} \label{sec:markers}
 		...
