--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -92,6 +92,9 @@
 			\label{fig:sonarqube}
 		\end{figure}
 		
+		An issue with SonarQube is that, while it has free options for analyzing
+		C\# code, 
+		
 	\section{SIG Evaluation} \label{sec:sigevaluation}
 		%TODO Write introduction part to SIG evaluation.
 		...
