Further elaboration on unit testing, as well as fixing a failing test.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -38,7 +38,17 @@
 			listed in a new window, and one can run all unit tests by clicking 
 			on the "Run All" button at the top. The menu then shows what unit 
 			tests have passed or failed, and clicking on a unit test shows what 
-			went wrong.
+			went wrong. A unit testing overview can be seen in \ref{fig:unitytesttools}.
+			The UnityTest testing class seen in the overview also displays
+			the different statuses of tests in the NUnit framework (passing,
+			failing, inconclusive, not executed, and culture specific).
+			
+			\begin{figure}[!ht]
+				\centering
+				\includegraphics[width=\textwidth]{UnityTestTools}
+				\caption{The Unity Test Tools unit testing screen.}
+				\label{fig:unitytesttools}
+			\end{figure}
 		
 		\subsection{Integration Tests} \label{ssec:integrationtests}
 			Integration tests are not done via a formalized test procedure, but 
