Productivity issues, so gonna work on the final report for a bit.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -201,11 +201,16 @@
       the code was to be handed in to SIG, Unity failed to build the project
       completely. There were no errors in the scripts, but errors in the build
       came directly from the compiler. This caused us to move everything that
-      we wanted to move from the original project to the new project.
+      we wanted to move from the original project to the new project. After
+      completing this task, development could continue on the OpenCV server.
+      
+      \subsection{The new projection code}
+      Week 7.
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
-      every week.\\
+      every week. An X in a particular subproject and week means that, during that
+      week, that subproject was developed further.\\
       \begin{table}[!ht]
 	      \begin{tabular}{| c | c | c | c | c | c | c | c | c | c | c |}
 	      	      \hline
@@ -215,7 +220,7 @@
 	      	      \hline
 	      	      Final report & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Networking & X & X & \space & \space & X & X & \space & \space & \space & \space \\
+	      	      Networking & X & X & \space & \space & X & X & X & \space & \space & \space \\
 	      	      \hline
 	      	      Augmented reality & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
 	      	      \hline
@@ -223,5 +228,7 @@
 	      	      \hline
 	      	      Testing & \space & \space & X & X & X & X & \space & \space & \space & \space \\
 	      	      \hline
+	      	      Projection & \space & \space & \space & X & X & X & X & \space & \space & \space \\
+		      	  \hline
 	      \end{tabular}
       \end{table}
