--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -73,7 +73,30 @@
 		...
 		
 		\subsection{Communication between C\# and C++} \label{ssec:communication}
-			...
+			Communication between the Unity clients and the OpenCV server 
+            happens through the use of sockets. For the Unity side, the Socket 
+            facility built into the C\# runtime is used. For the OpenCV server, 
+            the TCP Socket facility of the Qt Network module is used for 
+            providing a server socket capable of handling multiple clients. 
+            
+            The protocol used for communication is kept very simple to reduce 
+            network load and for simplicity. The protocol consists of a number
+            tag indicating the message type followed by the actual message 
+            content. To facilitate the features the game provides, the following
+            message types are used:
+            
+            \begin{description}
+                \item[Position Update] Sent by the server whenever it detects a 
+                                       change in a marker position.
+                \item[Position Delete] Sent by the server whenever a marker is
+                                       removed from the playing field.
+                \item[Rotation Update] Sent by remote players to indicate they 
+                                       have rotated an object. This message is 
+                                       forwarded to all connected clients by the
+                                       server.
+                \item[Ping Message]    Sent by the server and clients to indicate 
+                                       they are still connected and listening.
+            \end{description}
 		
 		\subsection{The master camera} \label{ssec:mastercamera}
 			...
