--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -27,7 +27,7 @@
 		down menu with different options, the most important one being the unit test
 		runner.
 		
-		\subsection{Unit Tests} \label{ssec:unittests)}
+		\subsection{C\# Unit Tests} \label{ssec:csharpunittests)}
 			Unit tests are written using the NUnit unit testing framework for 
 			C\#. NUnit is a test framework which was ported from the Java test 
 			framework JUnit, and was created to bring xUnit testing to all .NET 
@@ -49,6 +49,9 @@
 				\caption{The Unity Test Tools unit testing screen.}
 				\label{fig:unitytesttools}
 			\end{figure}
+			
+		\subsection{C++ Unit Tests} \label{ssec:cplusplusunittests}
+			...
 		
 		\subsection{Integration Tests} \label{ssec:integrationtests}
 			Integration tests are not done via a formalized test procedure, but 
@@ -110,8 +113,9 @@
 		OpenCV server.
 		
 	\section{SIG Evaluation} \label{sec:sigevaluation}
-		%TODO Write introduction part to SIG evaluation.
-		...
+		SIG is an acronym which stands for the Software Improvement Group,
+		which is a company that is based in Amsterdam. The company does code
+		analysis to evaluate code on a scale from one to five stars, 
 		
 	\section{Demo's and playtesting sessions} \label{sec:demos}
 		%TODO Write about the demo with the client.
