Writing more on the final report as the OpenCV server is being fixed.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -149,7 +149,9 @@
       programming to some extent.
       
     \section{Process}\label{sec:process}
-      This section describes the process of the project.
+      This section describes the process of the project. Overall, the project
+      was like a huge sinusoidal wave of "It's working" and "It's not working",
+      which oscillated between those two points several times a day.
       
       \subsection{Pre-project preparations} \label{ssec:preparations}
       Before the project started, we had a meeting halfway through March
@@ -205,7 +207,14 @@
       completing this task, development could continue on the OpenCV server.
       
       \subsection{The new projection code}
-      Week 7.
+      Week 7 began with further development on the OpenCV server and the code
+      needed for correct projection of the META One. The projection code base
+      was overhauled on Monday, mainly to allow for better unit testing. During
+      this week, the midterm meeting also took place, and we could show off
+      what we had up until that point. The coach and the customer(s) (Stephan
+      could not be there, so he sent some of his colleagues to check in on
+      how the project went) were impressed, but they also said that development
+      had to continue for the time being.
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
@@ -218,15 +227,15 @@
 	      	      \hline
 	      	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Final report & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
+	      	      Final report & \space & \space & \space & X & X & X & X & \space & \space & \space \\
 	      	      \hline
 	      	      Networking & X & X & \space & \space & X & X & X & \space & \space & \space \\
 	      	      \hline
-	      	      Augmented reality & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
+	      	      Augmented reality & \space & \space & \space & X & X & X & X & \space & \space & \space \\
 	      	      \hline
 	      	      Gameplay & X & X & X & X & \space & \space & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Testing & \space & \space & X & X & X & X & \space & \space & \space & \space \\
+	      	      Testing & \space & \space & X & X & X & X & X & \space & \space & \space \\
 	      	      \hline
 	      	      Projection & \space & \space & \space & X & X & X & X & \space & \space & \space \\
 		      	  \hline
