Final report work time.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -117,15 +117,17 @@
 		which is a company that is based in Amsterdam. The company does code
 		analysis to evaluate code quality on a scale from one to five stars,
 		and it does so according to the ISO/IEC 25010 model. Code score is 
-		based on the maintainability of the code. During the project, there 
-		are two opportunities to deliver the code that we have written to
-		SIG. The first opportunity is at the end of May, and the second is
-		halfway through June. The first opportunity is used as a midterm
-		quality feedback session, for us to get feedback about how good
-		the code is written and what can be done better. The second opportunity
-		is then intended to hand in the improved code, and for us to then
-		get feedback on how well the code has been improved. The improvements
-		in the code also have a weight in the final result for the project.
+		based on the maintainability of the code.
+		
+		During the project, there are two opportunities to deliver the code 
+		that we have written to SIG. The first opportunity is at the end of 
+		May, and the second is halfway through June. The first opportunity 
+		is used as a midterm quality feedback session, for us to get feedback 
+		about how good the code is written and what can be done better. The 
+		second opportunity is then intended to hand in the improved code, 
+		and for us to then get feedback on how well the code has been improved. 
+		The improvements in the code also have a weight in the final result 
+		for the project.
 		
 	\section{Demo's and playtesting sessions} \label{sec:demos}
 		%TODO Write about the demo with the client.
